# wan2p2-gui

./: .gitignore  =2.31.0  CROSS_PLATFORM_BUILD.md  LICENSE  PYINSTALLER_BUILD.md  README.md  RELEASE_SUMMARY.md  TAURI_DESKTOP_BUILD.md  WINDOWS_DEV_SETUP.md  build.py  build_executable.bat  build_executable.sh  create_valid_icons.py  launch.bat  requirements.txt  wan2p2-gui.spec
.github/workflows/: build-release.yml
archive/: create_ico_simple.py  create_windows_icon.py  generate_icons.py  launch.sh  test_executable.sh  test_ssh_connection.py
scripts/: remote_setup.sh  rife_interpolate.py
src/: __init__.py  __main__.py  config_manager.py  gpu_manager.py  main.py  model_manager.py  runpod_manager.py  setup_manager.py  ssh_key_manager.py  ssh_manager.py  utils.py  version_checker.py  video_generator.py
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/resources/: README.md
src-tauri/src/: index.html  main.rs
src-tauri/wix/: main.wxs
